<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/setting"
            style="@style/open_menu_bt_style"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/menu_button_text"
            android:src="@drawable/menu_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".0" />

        <TextView
            android:id="@+id/app_title"
            style="@style/app_title_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title"
            tools:listitem="@layout/workout_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_workout_button"
            style="@style/bar_addBT_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_day"
            android:src="@drawable/add_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <CalendarView
            android:id="@+id/calender"
            style="@style/bar_addBT_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:elevation="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/task_delete_confirmation_card"
            style="@style/delete_card"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_medium"
                    android:text="@string/workout_delete_confirmation_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".35" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/task_delete_confirm_button"
                    style="@style/Button_style"
                    android:layout_marginEnd="14dp"
                    android:text="@string/delete_button_text"
                    app:backgroundTint="@color/error_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_task_delete_button"
                    style="@style/Button_style"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/lexend_medium"
                    android:text="@string/cancel_button_text"
                    app:backgroundTint="#4A4A4A"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/task_delete_confirm_button"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_Workout_card"
            style="@style/Add_update_workout_card"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/workout_name"
                    style="@style/ET_box"
                    android:layout_marginTop="24dp"
                    android:hint="@string/workout_tv_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/date"
                    style="@style/ET_box"
                    android:layout_marginTop="8dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/workout_name" />

                <ImageButton
                    android:id="@+id/calenderButton"
                    style="@style/calender_icon_style"
                    android:contentDescription="@string/calender_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date"
                    app:layout_constraintTop_toBottomOf="@+id/workout_name" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    style="@style/Button_style"
                    android:layout_marginEnd="16dp"
                    android:text="@string/save_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/Button_style"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancel_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/save_button"
                    app:layout_constraintTop_toBottomOf="@+id/date" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/update_Workout_card"
            style="@style/Add_update_workout_card"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/updated_workout_name"
                    style="@style/ET_box"
                    android:layout_marginTop="24dp"
                    android:hint="@string/workout_tv_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/updated_date"
                    style="@style/ET_box"
                    android:layout_marginTop="8dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updated_workout_name" />

                <ImageButton
                    android:id="@+id/update_calenderButton"
                    style="@style/calender_icon_style"
                    android:contentDescription="@string/calender_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/updated_date"
                    app:layout_constraintTop_toBottomOf="@+id/updated_workout_name" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_button"
                    style="@style/Button_style"
                    android:layout_marginEnd="16dp"
                    android:text="@string/update_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updated_date" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_update_button"
                    style="@style/Button_style"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancel_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/update_button"
                    app:layout_constraintTop_toBottomOf="@+id/updated_date" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu"
        android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>